--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -16,7 +16,7 @@
         margin: 0 10px;
         label{
             align-self: center;
-            text-align: left;
+            text-align: center;
             width: 22%;
             min-width: 90px;
         }
