--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    background-image: linear-gradient(rgb(0, 0, 0), rgb(0, 77, 0));
+    background: rgba(0, 0, 0, 0.863);
     box-shadow: -1px -2px 5px 1px rgb(80, 80, 80);
     padding: .7em .7em;
     font-size: .7em;
@@ -20,7 +20,7 @@
         font-size: large;
         text-align: center;
         margin: .7em auto;
-        color: $colorVerdeClaro;
+        color: white;
         grid-area: titulo;
     }
     .footer__p--copy{
@@ -39,7 +39,11 @@
             text-align: center;
             li{
                 margin: 2% 0;
-                color: $colorVerdeClaro;
+                color: rgba(255, 255, 255, 0.8);
+                a{
+                    color: green;
+                    font-size: 1em;
+                }
             }
         }
     }
@@ -50,10 +54,10 @@
         padding: .2em .3em;
         margin: 0 auto;
         width: 90%;
-        color: $colorVerdeOscuro;
+        color: rgba(255, 255, 255, 0.8);
         grid-area: newsletter;
         label{
-            color: white;
+            color: rgba(255, 255, 255, 0.8);
             text-align: center;
             align-self: center;
             min-width: 90px;
