--- a/SCSS/_reset.scss
+++ b/SCSS/_reset.scss
@@ -7,11 +7,11 @@ body{
     overflow: scroll;
     a{
         text-decoration: none;
-        font-family: 'Flamenco', cursive;
+        font-family: "Open Sans", Helvetica, Arial, sans-serif;
         font-weight: 400;
     }
     main{
-        font-family: 'Asap', sans-serif;
+        font-family: "Open Sans", Helvetica, Arial, sans-serif;
     }
     ul{
         margin: 0;
@@ -19,7 +19,6 @@ body{
         list-style: none;
     }
 }
-
 
 
 
