--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -211,8 +211,9 @@ main .margen {
       width: 100%;
       height: 100%; }
   .index .index__p, .index .index__p--prim, .index .index__p--segu {
+    font-size: 1.25em;
     text-align: justify;
-    padding: 3.5em .5em;
+    padding: 3.5em 15px;
     margin: auto;
     z-index: 5; }
   .index .index__p--prim {
@@ -228,6 +229,7 @@ main .margen {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr); }
     .index .index__p, .index .index__p--prim, .index .index__p--segu {
+      font-size: .9em;
       text-align: justify;
       padding: 3em;
       z-index: 3; }
