--- a/SCSS/_index.scss
+++ b/SCSS/_index.scss
@@ -33,8 +33,9 @@
         grid-area: iframe;
     }
     .index__p{
+        font-size: 1.25em;
         text-align: justify;
-        padding: 3.5em .5em;
+        padding: 3.5em 15px;
         margin: auto;
         z-index: 5;
     }
@@ -57,6 +58,7 @@
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(2, 1fr);
         .index__p{
+            font-size: .9em;
             text-align: justify;
             padding: 3em ;
             z-index: 3;
