--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -65,7 +65,7 @@
             padding: 10px 0;
         }
         .form-control{
-            background: rgb(81, 129, 75);
+            background: rgba(255, 255, 255, 0.8);
             color: white;
             width: 70%;
             margin-right: 10px;
@@ -73,7 +73,7 @@
             min-height: 30px;
         }
         .form-control:focus{
-            box-shadow: 0 0 5px .25rem rgb(95, 186, 72);
+            box-shadow: 0 0 5px .13rem rgb(95, 186, 72);
             color: white;
         }
         .footer__form__button{
@@ -81,10 +81,14 @@
             min-width: 30px;
             height: 7vw;
             min-height: 30px;
-            background-image: url("../Multimedia/Imagenes/iconos/vector-enviar-.jpg");
+            background-image: url("../Multimedia/Imagenes/iconos/enviar.png");
             background-size: contain;
             background-repeat: no-repeat;
             border-radius: 10px;
+        }
+        .footer__form__button:hover{
+            background-image: url("../Multimedia/Imagenes/iconos/enviar-1.png");
+            box-shadow: 0 0 5px .13rem rgb(95, 186, 72);
         }
     }
 }
