--- a/SCSS/_componentes.scss
+++ b/SCSS/_componentes.scss
@@ -52,17 +52,9 @@ header{
             }
         }
     }
-main{
-    .margen{
-        visibility: hidden;
-        display: block;
-        width: 25vw;
-        height: 22vw;
-        min-width: 100px;
-        min-height: 75px;
-        max-width: 200px;
-        max-height: 150px;
-    }
+.margen{
+    height: 130px;
+    visibility: hidden;
 }
 .imgBoot{
     width: 25vw;
@@ -73,9 +65,6 @@ main{
     max-height: 104px;
 }
 @media only screen and (min-width: 640px){
-    html{
-    font-size: 2.3vw;
-    }
     nav{
         display: grid;
             grid-template-columns: 50% 50%;
@@ -83,10 +72,5 @@ main{
             align-items: flex-end;
             justify-content: flex-end;
         }
-    }
-}
-@media only screen and (min-width: 1150px){
-    html{
-    font-size: 1.8vw;
     }
 }
