--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -2,7 +2,7 @@
     background: rgba(0, 0, 0, 0.863);
     box-shadow: -1px -2px 5px 1px rgb(80, 80, 80);
     padding: .7em .7em;
-    font-size: .7em;
+    font-size: 1em;
     margin: 0;
     .footer__ul{
         display: flex;
