--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -16,6 +16,17 @@
                 font-weight: 700;
                 text-shadow: 5px 5px 5px $colorSombra;
             }
+            .simple{
+                width: 100%;
+                margin-top: 130px;
+            }
+            .superior{
+                width: 100%;
+                margin-top: 10px;
+            }
+            .supKing{
+                
+            }
             .info{
                 display: none;
                 font-size: .9em;
@@ -48,6 +59,7 @@
                 grid-template-areas:
                 "ul"
                 "servicioImg" ;
+            background-color: rgb(224, 224, 224);
             position: absolute;
             left: 100%;
             top: 0;
