--- a/SCSS/_reserva.scss
+++ b/SCSS/_reserva.scss
@@ -16,7 +16,7 @@
         }
     }
     .reserva__section--prim{
-        border-bottom: 3px dashed $colorVerdeOscuro;
+        border-bottom: 3px dashed black;
         label{
             display: inline-block;
             width: 26%;
