--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -4,4 +4,5 @@ $colorVerdeClaro: rgb(142, 238, 142);
 $colorVerde: #00ff15;
 $colorVerdeOscuro:#007000;
 $colorBordo: #830505;
+$colorFondo: rgba(255, 255, 255, 0.753);
 $anchoMax: 100%;
