--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -21,9 +21,9 @@ body {
   body .btn {
     margin: 3px;
     justify-content: center;
-    background-color: #8eee8e; }
+    background-color: rgba(255, 255, 255, 0.753); }
   body .btn:hover {
-    background-color: #007000; }
+    background-color: #8eee8e; }
   body .li__a {
     color: #555555 !important; }
   body .li__a:visited {
@@ -39,8 +39,6 @@ header {
   header nav {
     color: #555555;
     background: rgba(255, 255, 255, 0.753);
-    background-size: 10vw, 20vw, 30vw, 40vw;
-    background-position: 38% top, center, right, left;
     box-shadow: 1px 1px 15px 1px #505050; }
     header nav ul {
       display: flex;
@@ -124,7 +122,7 @@ header {
     padding: .2em .3em;
     margin: 0 auto;
     width: 90%;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.753);
     grid-area: newsletter; }
     .footer .footer__form label {
       color: rgba(255, 255, 255, 0.8);
@@ -148,12 +146,10 @@ header {
       min-width: 30px;
       height: 7vw;
       min-height: 30px;
-      background-image: url("../Multimedia/Imagenes/iconos/enviar.png");
       background-size: contain;
       background-repeat: no-repeat;
       border-radius: 10px; }
     .footer .footer__form .footer__form__button:hover {
-      background-image: url("../Multimedia/Imagenes/iconos/enviar-1.png");
       box-shadow: 0 0 5px 0.13rem #5fba48; }
 
 @media only screen and (min-width: 440px) {
@@ -243,6 +239,7 @@ header {
 main .galeria .galeria__section {
   display: flex;
   flex-wrap: wrap;
+  position: relative;
   margin: 10px 3.8%; }
   main .galeria .galeria__section div {
     width: 33%;
@@ -262,7 +259,7 @@ main .galeria .galeria__section {
       height: 0vw;
       transition: all .5s ease; }
   main .galeria .galeria__section div:hover .min {
-    transform: scale(1.3);
+    transform: scale(2.3);
     box-shadow: 1px 2px 7px 2px;
     border: 2px solid black; }
 
@@ -346,7 +343,7 @@ main .galeria .galeria__section {
       display: grid;
       grid-template-columns: 63vw;
       grid-template-areas: "ul" "servicioImg";
-      background-color: #e0e0e0;
+      background-color: rgba(255, 255, 255, 0.753);
       position: absolute;
       left: 100%;
       top: 0;
@@ -399,7 +396,7 @@ main .galeria .galeria__section {
       font-size: 1.3em;
       line-height: 1.5em; }
   .reserva .reserva__section--prim {
-    border-bottom: 3px dashed #007000; }
+    border-bottom: 3px dashed black; }
     .reserva .reserva__section--prim label {
       display: inline-block;
       width: 26%; }
