--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -24,9 +24,6 @@
                 width: 100%;
                 margin-top: 10px;
             }
-            .supKing{
-                
-            }
             .info{
                 display: none;
                 font-size: .9em;
@@ -59,7 +56,7 @@
                 grid-template-areas:
                 "ul"
                 "servicioImg" ;
-            background-color: rgb(224, 224, 224);
+            background-color: $colorFondo;
             position: absolute;
             left: 100%;
             top: 0;
