--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -17,13 +17,14 @@ body ul {
   list-style: none; }
 
 body {
+  margin-top: 110px;
   background: rgba(255, 255, 255, 0.753); }
   body .btn {
     margin: 3px;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.753); }
   body .btn:hover {
-    background-color: #8eee8e; }
+    background-color: #486b00; }
   body .li__a {
     color: #555555 !important; }
   body .li__a:visited {
@@ -40,24 +41,20 @@ header {
     color: #555555;
     background: rgba(255, 255, 255, 0.753);
     box-shadow: 1px 1px 15px 1px #505050; }
+    header nav .navbar-brand {
+      width: auto;
+      height: 100px; }
+      header nav .navbar-brand img {
+        width: 100%;
+        height: auto; }
     header nav ul {
       display: flex;
       list-style: none; }
       header nav ul li {
         flex: 1;
-        font-size: 1.3em;
+        font-size: 1.25em;
         text-align: left;
         margin-bottom: 7px; }
-    header nav .navbar-brand {
-      width: 70%;
-      height: 100px; }
-      header nav .navbar-brand img {
-        width: 100%;
-        height: auto; }
-
-.margen {
-  height: 130px;
-  visibility: hidden; }
 
 .imgBoot {
   width: 25vw;
@@ -67,20 +64,12 @@ header {
   max-width: 200px;
   max-height: 104px; }
 
-@media only screen and (min-width: 640px) {
-  nav {
-    display: grid;
-    grid-template-columns: 50% 50%; }
-    nav ul {
-      align-items: flex-end;
-      justify-content: flex-end; } }
-
 .footer {
   background: rgba(0, 0, 0, 0.863);
-  box-shadow: -1px -2px 5px 1px #505050;
   padding: .7em .7em;
   font-size: 1em;
-  margin: 0; }
+  margin: 0;
+  z-index: 10; }
   .footer .footer__ul {
     display: flex;
     justify-content: center;
@@ -113,7 +102,7 @@ header {
         margin: 2% 0;
         color: rgba(255, 255, 255, 0.8); }
         .footer address ul li a {
-          color: green;
+          color: #a2c523;
           font-size: 1em; }
   .footer .footer__form {
     display: flex;
@@ -139,7 +128,7 @@ header {
       height: 3.7vw;
       min-height: 30px; }
     .footer .footer__form .form-control:focus {
-      box-shadow: 0 0 5px 0.13rem #5fba48;
+      box-shadow: 0 0 15px .33em #2e4600;
       color: white; }
     .footer .footer__form .footer__form__button {
       width: 7vw;
@@ -150,7 +139,7 @@ header {
       background-repeat: no-repeat;
       border-radius: 10px; }
     .footer .footer__form .footer__form__button:hover {
-      box-shadow: 0 0 5px 0.13rem #5fba48; }
+      box-shadow: 0 0 15px .33em #2e4600; }
 
 @media only screen and (min-width: 440px) {
   .footer {
@@ -170,13 +159,15 @@ header {
 
 .index {
   position: relative;
-  background-color: rgba(255, 255, 255, 0.945); }
+  background-color: rgba(255, 255, 255, 0.753); }
   .index h2 {
+    font-size: 35px;
     position: absolute;
-    top: 80vh;
-    left: 10px;
+    top: 70vh;
+    left: 5px;
     color: rgba(255, 255, 255, 0.945);
     text-transform: uppercase;
+    text-shadow: 3px 3px 3px #505050;
     grid-area: img; }
   .index .index__div--img {
     width: 100%;
@@ -199,34 +190,44 @@ header {
       width: 100%;
       height: 100%; }
   .index .index__p, .index .index__p--prim, .index .index__p--segu {
+    max-width: 540px;
     font-size: 1em;
     text-align: justify;
     padding: 3.5em 15px;
-    margin: 0; }
+    margin: auto;
+    color: #555; }
   .index .index__p--prim {
     grid-area: primerParrafo; }
   .index .index__p--segu {
     grid-area: segundoParrafo; }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 665px) {
+  .index h2 {
+    font-size: 35px;
+    top: 85vh;
+    left: 5px; } }
+
+@media only screen and (min-width: 1281px) {
   .index {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 100vh auto;
-    grid-template-areas: "img primerParrafo" "segundoParrafo iframe"; }
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto auto;
+    grid-template-areas: "img img img primerParrafo primerParrafo" "segundoParrafo segundoParrafo iframe iframe iframe"; }
     .index h2 {
-      font-size: 3em; }
+      font-size: 3em;
+      top: 65vh; }
+    .index .index__div--img {
+      height: calc(100vh - 110px); }
     .index .index__p--prim {
       font-size: 1.2em;
       text-align: justify;
-      background-color: rgba(0, 0, 0, 0.952);
-      color: white;
       width: 100%;
-      height: 100%;
-      padding: 35% 3.5em; }
+      height: auto;
+      padding: 0 3.5em;
+      align-self: center; }
       .index .index__p--prim b {
         display: block;
-        font-size: 3em; }
+        font-size: 2.5em; }
     .index .index__p--segu {
       width: 100%;
       height: 100%;
@@ -298,87 +299,171 @@ main .galeria .galeria__section {
         left: 55%;
         box-shadow: 2px 7px 15px 6px; } }
 
-.servicio {
-  display: grid;
-  grid-template-columns: 33%; }
-  .servicio .servicio__ul {
+/* .servicio{
+    display: grid;
+        grid-template-columns: 33%;
+    .servicio__ul{
+        position: relative;
+        margin: 0 26px 0 0;
+        .servicio__ul__li{
+            margin: 40px 0;
+            h3{
+                text-align: center;
+                font-size: 1em;
+                padding: 2px;
+            }
+            h3:hover{
+                cursor: pointer;
+                color: rgb(0, 82, 0);
+                font-weight: 700;
+                text-shadow: 5px 5px 5px $colorSombra;
+            }
+            .simple{
+                display: none;
+                width: 110%;
+                margin-top: 170px;
+                z-index: 1;
+            }
+            .superior{
+                display: none;
+                width: 120%;
+                margin-top: 30px;
+            }
+            .info{
+                display: none;
+                font-size: .9em;
+                z-index: 2;
+                .info__ul{
+                    grid-area: ul;
+                    text-align: center;
+                    margin: auto 0;
+                    li{
+                    margin: 5px 0;
+                    }
+                }
+                .carousel{
+                    width: 90%;
+                    margin: auto;
+                    grid-area: servicioImg;
+                    .carousel-item{
+                        width: 100%;
+                        img{
+                            width: 100%;
+                            height: auto;
+                        }
+                    }
+                }
+            }
+        }
+        .servicio__ul__li:hover .info{
+            display: grid;
+            grid-template-columns: 63vw;
+                grid-template-areas:
+                "ul"
+                "servicioImg" ;
+            background-color: $colorFondo;
+            position: absolute;
+            left: 100%;
+            top: 0;
+            bottom: 0;
+        }
+    }
+}
+@media only screen and (min-width: 716px){
+    .servicio{
+            grid-template-columns: 100%;
+        height: calc(100vh - 100px);
+        padding-top: 20px;
+        .servicio__ul{
+            display: grid;
+                grid-template-columns: repeat(5, 1fr);
+            max-width: 100%;
+            .servicio__ul__li{
+                display: grid;
+                    grid-template-rows: 12% 80%;
+                margin: 8px 0;
+                h3{
+                    font-size: 1.3em;
+                }
+                .info{
+                    .info__ul{
+                        font-size: 1.2em;
+                        margin: 0 10px;
+                        justify-self: center;
+                        align-self: center;
+                    }
+                }
+            }
+            .servicio__ul__li:hover .info{
+                grid-template-columns: 50% 50%;
+                grid-template-rows: 100%;
+                grid-template-areas:
+                "ul servicioImg";
+            left: 0%;
+            top: 15%;
+            width: 100%;
+            }
+        }
+    }
+} */
+/* @media only screen and (min-width: 900px){ */
+main {
+  padding-top: 0px; }
+  main .servicio .servicio__ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     position: relative; }
-    .servicio .servicio__ul .servicio__ul__li {
-      margin: 40px 0; }
-      .servicio .servicio__ul .servicio__ul__li h3 {
-        text-align: center;
+    main .servicio .servicio__ul .servicio__ul__li {
+      position: relative; }
+      main .servicio .servicio__ul .servicio__ul__li img {
+        width: 100%; }
+      main .servicio .servicio__ul .servicio__ul__li h3 {
+        position: absolute;
+        top: 10px;
+        left: 10px;
         font-size: 1em;
-        padding: 2px; }
-      .servicio .servicio__ul .servicio__ul__li h3:hover {
-        cursor: pointer;
-        color: #005200;
-        font-weight: 700;
-        text-shadow: 5px 5px 5px #505050; }
-      .servicio .servicio__ul .servicio__ul__li .simple {
-        width: 100%;
-        margin-top: 130px; }
-      .servicio .servicio__ul .servicio__ul__li .superior {
-        width: 100%;
-        margin-top: 10px; }
-      .servicio .servicio__ul .servicio__ul__li .info {
-        display: none;
-        font-size: .9em; }
-        .servicio .servicio__ul .servicio__ul__li .info .info__ul {
-          grid-area: ul;
-          text-align: center;
-          margin: auto 0;
-          padding: 0; }
-          .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
-            margin: 5px 0; }
-        .servicio .servicio__ul .servicio__ul__li .info .carousel {
+        color: white;
+        text-shadow: 3px 3px 3px #505050;
+        z-index: 3; }
+      main .servicio .servicio__ul .servicio__ul__li h3:hover {
+        cursor: pointer; }
+      main .servicio .servicio__ul .servicio__ul__li .info {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: rotateY(90deg);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        font-size: 1.5vw;
+        line-height: 1.6;
+        background-color: #486b00;
+        color: #fff;
+        z-index: 2; }
+        main .servicio .servicio__ul .servicio__ul__li .info .info__ul {
+          grid-area: ul; }
+          main .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
+            text-align: center; }
+        main .servicio .servicio__ul .servicio__ul__li .info .carousel {
+          display: none;
           width: 90%;
           margin: auto;
           grid-area: servicioImg; }
-          .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
+          main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
             width: 100%; }
-            .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
+            main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
               width: 100%;
               height: auto; }
-    .servicio .servicio__ul .servicio__ul__li:hover .info {
-      display: grid;
-      grid-template-columns: 63vw;
-      grid-template-areas: "ul" "servicioImg";
-      background-color: rgba(255, 255, 255, 0.753);
-      position: absolute;
-      left: 100%;
-      top: 0;
-      bottom: 0; }
-
-@media only screen and (min-width: 530px) {
-  .servicio {
-    grid-template-columns: 100%;
-    height: 420px; }
-    .servicio .servicio__ul {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      max-width: 100%; }
-      .servicio .servicio__ul .servicio__ul__li {
-        display: grid;
-        grid-template-rows: 12% 80%;
-        margin: 8px 0; }
-        .servicio .servicio__ul .servicio__ul__li h3 {
-          font-size: 1.3em; }
-        .servicio .servicio__ul .servicio__ul__li .info .info__ul {
-          font-size: 1.2em;
-          margin: 0 10px;
-          justify-self: center;
-          align-self: center; }
-      .servicio .servicio__ul .servicio__ul__li:hover .info {
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 100%;
-        grid-template-areas: "ul servicioImg";
-        left: 0%;
-        top: 15%;
-        width: 100%; } }
-
-@media only screen and (min-width: 1023px) {
-  .servicio {
-    height: 38vw; } }
+    main .servicio .servicio__ul .servicio__ul__li:hover img {
+      transition: all .5s ease-in-out;
+      transform: rotateY(90deg);
+      transform-style: preserve-3d; }
+    main .servicio .servicio__ul .servicio__ul__li:hover .info {
+      transition: .5s .5s ease-in-out;
+      transform: rotateY(0deg); }
 
 .reserva {
   padding: 1em 0;
@@ -404,14 +489,14 @@ main .galeria .galeria__section {
       width: 68%;
       height: 2.2em;
       margin: 4px 0;
-      color: #007000; }
+      color: #2e4600; }
     .reserva .reserva__section--prim select {
       width: 68%;
       height: 2.2em;
       margin: 4px 0; }
     .reserva .reserva__section--prim .form-control:focus {
       box-shadow: 0 0 5px 0.25rem #5fba48;
-      color: #007000; }
+      color: #2e4600; }
   .reserva .reserva__section--secu label {
     width: 43%;
     margin: 3px auto;
@@ -419,7 +504,7 @@ main .galeria .galeria__section {
   .reserva .reserva__section--secu input {
     margin-right: 10px; }
   .reserva .reserva__section--terc {
-    border-bottom: 3px dashed #007000; }
+    border-bottom: 3px dashed #2e4600; }
     .reserva .reserva__section--terc label {
       width: 30%;
       justify-self: center;
@@ -443,7 +528,7 @@ main .galeria .galeria__section {
     .reserva .reserva__section--prim {
       grid-area: reservaA;
       width: 100%;
-      border-right: 3px dashed #007000; }
+      border-right: 3px dashed #2e4600; }
     .reserva .reserva__section--secu {
       grid-area: reservaB; }
     .reserva .reserva__section--terc {
@@ -468,13 +553,14 @@ main .galeria .galeria__section {
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      border-left: 3px dashed #007000; }
+      border-left: 3px dashed #2e4600; }
       .reserva .reserva__section--cuar input {
         font-size: 1em;
         width: 170px;
         max-width: none; } }
 
 .contacto {
+  padding-top: 20px;
   margin: 15px; }
   .contacto .contacto__add address {
     width: 100%; }
@@ -497,10 +583,10 @@ main .galeria .galeria__section {
       height: 2.2em;
       margin: 5px 0;
       background: #e2e2e2;
-      color: #007000; }
+      color: #2e4600; }
     .contacto .contacto__form .form-control:focus {
       box-shadow: 0 0 5px 0.25rem #5fba48;
-      color: #007000; }
+      color: #2e4600; }
     .contacto .contacto__form div {
       width: 100%;
       text-align: center; }
