--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,8 +1,9 @@
 $colorDorado:  #d9ff00;
 $colorSombra: #505050;
-$colorVerdeClaro: rgb(142, 238, 142);
+$colorVerdeLima: #a2c523;
 $colorVerde: #00ff15;
-$colorVerdeOscuro:#007000;
+$colorVerdeOscuro:#2e4600;
 $colorBordo: #830505;
 $colorFondo: rgba(255, 255, 255, 0.753);
+$colorLetra: #555;
 $anchoMax: 100%;
