--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -111,7 +111,8 @@ main{
     .servicio{
         .servicio__ul{
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(6, 1fr);
+                grid-template-rows: auto;
             position: relative;
             .servicio__ul__li{
                 position: relative;
@@ -167,15 +168,35 @@ main{
                     }
                 }
             }
-            .servicio__ul__li:hover img{
-                transition:all .5s ease-in-out;
-                transform: rotateY(90deg);
-                transform-style: preserve-3d;
+            .simple{
+                grid-column: 1 / 3;
+                grid-row: 1;
             }
-            .servicio__ul__li:hover .info{
-                transition:.5s .5s ease-in-out;
-                transform: rotateY(0deg);
+            .superior{
+                grid-column: 2/4;
+                grid-row: 1;
             }
+            .king{
+                grid-column: 3/5;
+                grid-row: 1;
+            }
+            .jr{
+                grid-column: 1 / 3;
+                grid-row: 2;
+            }
+            .suite{
+                grid-column: 2 / 4;
+                grid-row: 2;
+            }
+        }
+        .servicio__ul__li:hover img{
+            transition:all .5s ease-in-out;
+            transform: rotateY(90deg);
+            transform-style: preserve-3d;
+        }
+        .servicio__ul__li:hover .info{
+            transition:.5s .5s ease-in-out;
+            transform: rotateY(0deg);
         }
     }
 }
