--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -411,7 +411,8 @@ main {
   padding-top: 0px; }
   main .servicio .servicio__ul {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
     position: relative; }
     main .servicio .servicio__ul .servicio__ul__li {
       position: relative; }
@@ -457,13 +458,28 @@ main {
             main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
               width: 100%;
               height: auto; }
-    main .servicio .servicio__ul .servicio__ul__li:hover img {
-      transition: all .5s ease-in-out;
-      transform: rotateY(90deg);
-      transform-style: preserve-3d; }
-    main .servicio .servicio__ul .servicio__ul__li:hover .info {
-      transition: .5s .5s ease-in-out;
-      transform: rotateY(0deg); }
+    main .servicio .servicio__ul .simple {
+      grid-column: 1 / 3;
+      grid-row: 1; }
+    main .servicio .servicio__ul .superior {
+      grid-column: 2/4;
+      grid-row: 1; }
+    main .servicio .servicio__ul .king {
+      grid-column: 3/5;
+      grid-row: 1; }
+    main .servicio .servicio__ul .jr {
+      grid-column: 1 / 3;
+      grid-row: 2; }
+    main .servicio .servicio__ul .suite {
+      grid-column: 2 / 4;
+      grid-row: 2; }
+  main .servicio .servicio__ul__li:hover img {
+    transition: all .5s ease-in-out;
+    transform: rotateY(90deg);
+    transform-style: preserve-3d; }
+  main .servicio .servicio__ul__li:hover .info {
+    transition: .5s .5s ease-in-out;
+    transform: rotateY(0deg); }
 
 .reserva {
   padding: 1em 0;
