--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -17,7 +17,7 @@ body ul {
   list-style: none; }
 
 body {
-  margin-top: 110px;
+  margin-top: 117px;
   background: rgba(255, 255, 255, 0.753); }
   body .btn {
     margin: 3px;
@@ -249,7 +249,7 @@ main .galeria .galeria__section {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border: 1px solid #0d6f00; }
+      border: 1px solid black; }
     main .galeria .galeria__section div .max {
       display: block;
       position: fixed;
@@ -407,79 +407,95 @@ main .galeria .galeria__section {
     }
 } */
 /* @media only screen and (min-width: 900px){ */
-main {
-  padding-top: 0px; }
-  main .servicio .servicio__ul {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: auto;
-    position: relative; }
-    main .servicio .servicio__ul .servicio__ul__li {
-      position: relative; }
-      main .servicio .servicio__ul .servicio__ul__li img {
-        width: 100%; }
-      main .servicio .servicio__ul .servicio__ul__li h3 {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        font-size: 1em;
-        color: white;
-        text-shadow: 3px 3px 3px #505050;
-        z-index: 3; }
-      main .servicio .servicio__ul .servicio__ul__li h3:hover {
-        cursor: pointer; }
-      main .servicio .servicio__ul .servicio__ul__li .info {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transform: rotateY(90deg);
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+main .servicio .servicio__ul {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto;
+  position: relative; }
+  main .servicio .servicio__ul .servicio__ul__li {
+    position: relative;
+    border: 2px solid black; }
+    main .servicio .servicio__ul .servicio__ul__li img {
+      width: 100%; }
+    main .servicio .servicio__ul .servicio__ul__li h3 {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 1.2em;
+      color: white;
+      text-shadow: 3px 3px 3px #505050;
+      z-index: 3; }
+    main .servicio .servicio__ul .servicio__ul__li h3:hover {
+      cursor: pointer; }
+    main .servicio .servicio__ul .servicio__ul__li .info {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transform: rotateY(90deg);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      font-size: 1.5vw;
+      line-height: 1.6;
+      background-color: #486b00;
+      color: #fff;
+      z-index: 2; }
+      main .servicio .servicio__ul .servicio__ul__li .info .info__ul {
+        grid-area: ul; }
+        main .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
+          text-align: center; }
+      main .servicio .servicio__ul .servicio__ul__li .info .carousel {
+        display: none;
+        width: 90%;
         margin: auto;
-        font-size: 1.5vw;
-        line-height: 1.6;
-        background-color: #486b00;
-        color: #fff;
-        z-index: 2; }
-        main .servicio .servicio__ul .servicio__ul__li .info .info__ul {
-          grid-area: ul; }
-          main .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
-            text-align: center; }
-        main .servicio .servicio__ul .servicio__ul__li .info .carousel {
-          display: none;
-          width: 90%;
-          margin: auto;
-          grid-area: servicioImg; }
-          main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
-            width: 100%; }
-            main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
-              width: 100%;
-              height: auto; }
-    main .servicio .servicio__ul .simple {
-      grid-column: 1 / 3;
-      grid-row: 1; }
-    main .servicio .servicio__ul .superior {
-      grid-column: 2/4;
-      grid-row: 1; }
-    main .servicio .servicio__ul .king {
-      grid-column: 3/5;
-      grid-row: 1; }
-    main .servicio .servicio__ul .jr {
-      grid-column: 1 / 3;
-      grid-row: 2; }
-    main .servicio .servicio__ul .suite {
-      grid-column: 2 / 4;
-      grid-row: 2; }
-  main .servicio .servicio__ul__li:hover img {
-    transition: all .5s ease-in-out;
-    transform: rotateY(90deg);
-    transform-style: preserve-3d; }
-  main .servicio .servicio__ul__li:hover .info {
-    transition: .5s .5s ease-in-out;
-    transform: rotateY(0deg); }
+        grid-area: servicioImg; }
+        main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
+          width: 100%; }
+          main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
+            width: 100%;
+            height: auto; }
+  main .servicio .servicio__ul .simple {
+    grid-column: 1 / 3;
+    grid-row: 1; }
+  main .servicio .servicio__ul .superior {
+    grid-column: 3 / 5;
+    grid-row: 1; }
+  main .servicio .servicio__ul .king {
+    grid-column: 5 / 7;
+    grid-row: 1; }
+  main .servicio .servicio__ul .jr {
+    grid-column: 1 / 4;
+    grid-row: 2;
+    font-size: 1.5em; }
+    main .servicio .servicio__ul .jr .info {
+      font-size: 2vw; }
+  main .servicio .servicio__ul .suite {
+    grid-column: 4 / 7;
+    grid-row: 2;
+    font-size: 1.5em; }
+    main .servicio .servicio__ul .suite .info {
+      font-size: 2vw; }
+
+main .servicio .servicio__ul__li:hover img {
+  transition: all .5s ease-in-out;
+  transform: rotateY(90deg);
+  transform-style: preserve-3d; }
+
+main .servicio .servicio__ul__li:hover .info {
+  transition: .5s .5s ease-in-out;
+  transform: rotateY(0deg); }
+
+main .servicio .servicio__ul__li img {
+  transition: .5s .5s ease-in-out;
+  transform: rotateY(0deg);
+  transform-style: preserve-3d; }
+
+main .servicio .servicio__ul__li .info {
+  transition: all .5s ease-in-out;
+  transform: rotateY(90deg); }
 
 .reserva {
   padding: 1em 0;
