--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -12,7 +12,7 @@ main{
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
-                        border: 1px solid rgb(13, 111, 0);
+                        border: 1px solid black;
                     }
                     .max{
                         display: block;
