--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -107,7 +107,6 @@
 } */
 /* @media only screen and (min-width: 900px){ */
 main{
-    padding-top: 0px;
     .servicio{
         .servicio__ul{
                 display: grid;
@@ -116,6 +115,7 @@ main{
             position: relative;
             .servicio__ul__li{
                 position: relative;
+                border: 2px solid black;
                 img{
                     width: 100%;
                 }
@@ -123,7 +123,7 @@ main{
                     position: absolute;
                     top: 10px;
                     left: 10px;
-                    font-size: 1em;
+                    font-size: 1.2em;
                     color: white;
                     text-shadow: 3px 3px 3px $colorSombra;
                     z-index: 3;
@@ -173,20 +173,28 @@ main{
                 grid-row: 1;
             }
             .superior{
-                grid-column: 2/4;
+                grid-column: 3 / 5;
                 grid-row: 1;
             }
             .king{
-                grid-column: 3/5;
+                grid-column: 5 / 7;
                 grid-row: 1;
             }
             .jr{
-                grid-column: 1 / 3;
+                grid-column: 1 / 4;
                 grid-row: 2;
+                font-size: 1.5em;
+                .info{
+                    font-size: 2vw;
+                }
             }
             .suite{
-                grid-column: 2 / 4;
+                grid-column: 4 / 7;
                 grid-row: 2;
+                font-size: 1.5em;
+                .info{
+                    font-size: 2vw;
+                }
             }
         }
         .servicio__ul__li:hover img{
@@ -198,5 +206,14 @@ main{
             transition:.5s .5s ease-in-out;
             transform: rotateY(0deg);
         }
+        .servicio__ul__li{ img{
+            transition:.5s .5s ease-in-out;
+            transform: rotateY(0deg);
+            transform-style: preserve-3d;
+        }}
+        .servicio__ul__li{ .info{
+            transition:all .5s ease-in-out;
+            transform: rotateY(90deg);
+        }}
     }
 }
