--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -141,7 +141,7 @@ header {
     .footer .footer__form .footer__form__button:hover {
       box-shadow: 0 0 15px .33em #2e4600; }
 
-@media only screen and (min-width: 440px) {
+@media only screen and (min-width: 600px) {
   .footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -158,25 +158,25 @@ header {
       height: 3.7vw; } }
 
 .index {
-  position: relative;
   background-color: rgba(255, 255, 255, 0.753); }
-  .index h2 {
-    font-size: 35px;
-    position: absolute;
-    top: 70vh;
-    left: 5px;
-    color: rgba(255, 255, 255, 0.945);
-    text-transform: uppercase;
-    text-shadow: 3px 3px 3px #505050;
-    grid-area: img; }
   .index .index__div--img {
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc( 100vh - 110px);
     grid-area: img; }
     .index .index__div--img img {
       width: 100%;
       height: 100%;
       object-fit: cover; }
+    .index .index__div--img h2 {
+      position: absolute;
+      bottom: 20px;
+      left: 5px;
+      font-size: 2em;
+      padding: 0 10px;
+      color: white;
+      text-transform: uppercase;
+      text-shadow: 3px 3px 3px #505050; }
   .index .index__div--iframe {
     position: relative;
     padding-bottom: 53.85%;
@@ -201,11 +201,13 @@ header {
   .index .index__p--segu {
     grid-area: segundoParrafo; }
 
+@media only screen and (min-width: 354px) {
+  .index h2 {
+    font-size: 2.5em; } }
+
 @media only screen and (min-width: 665px) {
   .index h2 {
-    font-size: 35px;
-    top: 85vh;
-    left: 5px; } }
+    font-size: 3em; } }
 
 @media only screen and (min-width: 1281px) {
   .index {
