--- a/SCSS/_index.scss
+++ b/SCSS/_index.scss
@@ -1,25 +1,25 @@
 .index{
-    position: relative;
     background-color: $colorFondo;
-    h2{
-        font-size: 35px;
-        position: absolute;
-        top: 70vh;
-        left: 5px;
-        color: rgba(255, 255, 255, 0.945);
-        text-transform: uppercase;
-        text-shadow: 3px 3px 3px $colorSombra;
-        grid-area: img;
-    }
     .index__div--img{
+        position: relative;
         width: 100%;
-        height: 100vh;
+        height: calc( 100vh - 110px );
+        grid-area: img;
         img{
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
-        grid-area: img;
+        h2{
+            position: absolute;
+            bottom: 20px;
+            left: 5px;
+            font-size: 2em;
+            padding: 0 10px;
+            color: white;
+            text-transform: uppercase;
+            text-shadow: 3px 3px 3px $colorSombra;
+        }
     }
     .index__div--iframe{
         position: relative;
@@ -52,12 +52,17 @@
         grid-area: segundoParrafo;
     }
 }
+@media only screen and (min-width: 354px){
+    .index{
+        h2{
+            font-size: 2.5em;
+        }
+    }
+}
 @media only screen and (min-width: 665px){
     .index{
         h2{
-            font-size: 35px;
-            top: 85vh;
-            left: 5px;
+            font-size: 3em;
         }
     }
 }
