--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -147,6 +147,7 @@ main{
                     background-color: #486b00;
                     color: #fff;
                     z-index: 2;
+                    text-transform: uppercase;
                     .info__ul{
                         grid-area: ul;
                         li{
