--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -20,7 +20,7 @@ main{
                         left: 50%;
                         width: 0vw;
                         height: 0vw;
-                        transition: all 2s ease;
+                        transition: all .7s ease;
                     }
                 }
                 div:hover .min{
