--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -15,7 +15,7 @@ main{
                     }
                     .max{
                         display: block;
-                        position: fixed;
+                        position: absolute;
                         object-fit: cover;
                         left: 50%;
                         width: 0vw;
